# MIOTI_TFM

./: README.md  main_model_directionality.py  main_model_operations.py
backtesting/: backtest_double_model.py
backtesting/analyze/: analyze_results.py  market_analysis.py
backtesting/strategy/: services_strategy.py  strategy_double_model.py  strategy_dynamic_exposures.py  strategy_simple.py  trading_strats.py
backtesting/strategy/__pycache__/: trading_strats.simulate_short_trade_partial-46.py310.1.nbc  trading_strats.simulate_short_trade_partial-46.py310.2.nbc  trading_strats.simulate_short_trade_partial-46.py310.nbi  trading_strats.simulate_trade_partial-11.py310.1.nbc  trading_strats.simulate_trade_partial-11.py310.2.nbc  (+1 more)
models_directionality/: features_selection_optuna.py  get_model_nn_data.py  utilities.py  utilities_2.py
models_operations/: evaluate_metamodels.py  models.py
models_operations/HYBRIDS/: model_HYBRIDS.py  model_HYBRIDS_MULTIVARIATE.py
models_operations/LSTM/: models_LSTM.py
models_operations/TRANSFORMER/: model_TRANSFORMER.py
models_operations/XGBOOST/: models_XGBOOST.py
random_monkey_tests/: Cargo.toml
random_monkey_tests/data/: balance_final.json  monkey_srs.json  plot_sharpe.py  testPredictions.json  testPredictionsINVERSE.json
random_monkey_tests/examples/: read_parquet.rs  run_monkeys.rs  test_simulators.rs  test_strategy.rs
random_monkey_tests/src/: data_loader.rs  lib.rs  main.rs  simulators.rs  strategy.rs
services_preprocessing/: get_features.py  preprocess_LSTM_data.py  services.py
