[package]
name = "crabby-monkeys"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
rand    = "0.8"
rayon   = "1.10"
serde   = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs      = "0.15"
ordered-float = "4"
polars = { version = "0.48.1", features = ["lazy", "parquet"] }
log = "0.4"
env_logger = "0.11"
